tactical_sync.log
Executing Tactical SITREP Ingest...
TACTICAL ALERT [WEATHER]: A system error has occurred in the atmospheric sensor 
array, resulting in a complete loss of current aviation weather telemetry for 
the sector.
TACTICAL ALERT [AIR]: Persistent ADS-B data integrity issues detected, including
target 0c6061 reporting a physically impossible 0 kt ground speed at an altitude
of 27,075 feet.
TACTICAL ALERT [CYBER]: Three critical vulnerabilities, including an Ivanti 
authentication bypass and SolarWinds deserialization flaw, were added to the 
CISA KEV catalog on 2026-03-09.
Ingested: Title: Master Tactical SITREP - 2026-03-09 20:30:06
Executing Tactical SITREP Ingest...
TACTICAL ALERT [WEATHER]: Total failure of National Weather Service and 
Atmospheric sensor data feeds detected in the Tioga County Sector.
TACTICAL ALERT [RF]: Increase in ADS-B ghost targets and an APRS sensor 
connection reset suggest active signal interference or sensor processing errors.
TACTICAL ALERT [CYBER]: Three critical vulnerabilities including Ivanti Endpoint
Manager and SolarWinds Web Help Desk were added to the CISA KEV on 2026-03-09.
Ingested: Title: Master Tactical SITREP - 2026-03-09 21:00:06
Traceback (most recent call last):
  File "/home/chuck/Projects/radar/.venv/bin/radar", line 4, in <module>
    from radar.main import app
  File "/home/chuck/Projects/radar/src/radar/main.py", line 10, in <module>
    from radar.core.ingest import (
  File "/home/chuck/Projects/radar/src/radar/core/ingest.py", line 491
    def __init__(self):
    ^
IndentationError: expected an indented block after class definition on line 490
Executing Tactical SITREP Ingest...
TACTICAL ALERT [AIR]: Massive escalation in signal anomalies with 45 percent of 
ADS-B tracks reporting impossible zeroed telemetry, confirming an intensifying 
atmospheric ghosting trend.
TACTICAL ALERT [WEATHER]: Tactical sensor failure detected in the Atmos data 
feed, resulting in a loss of real-time aviation weather monitoring capabilities.
TACTICAL ALERT [CYBER]: Three new high-risk vulnerabilities targeting enterprise
management and help desk software have been added to the CISA KEV catalog.
Ingested: Title: Master Tactical SITREP - 2026-03-09 22:00:08
Executing Tactical SITREP Ingest...
TACTICAL ALERT [AIR]: Sixty-four percent of sector traffic shows telemetry 
corruption, specifically high-altitude targets reporting impossible zero-knot 
ground speeds.
TACTICAL ALERT [CYBER]: Three critical vulnerabilities affecting Ivanti, 
SolarWinds, and Omnissa were added to the CISA KEV list on 2026-03-09.
Tactical Note [WEATHER]: A critical sensor error is preventing the collection of
atmospheric and aviation weather data for the sector.
Ingested: Title: Master Tactical SITREP - 2026-03-09 22:30:07
Executing Tactical SITREP Ingest...
TACTICAL ALERT [CYBER]: Significant sensor integrity degradation detected with a
53 percent data corruption rate and 8 'ghost' tracks reporting zero altitude and
speed.
Tactical Note [CYBER]: Three new critical vulnerabilities targeting Omnissa, 
SolarWinds, and Ivanti were added to the CISA KEV list on 2026-03-09.
Ingested: Title: Master Tactical SITREP - 2026-03-09 23:00:08
Executing Tactical SITREP Ingest...
TACTICAL ALERT [AIR]: Target ae10b5 exhibits a hovering anomaly at 35,000 feet 
with 0 kt ground speed, indicating potential ADS-B spoofing or critical sensor 
failure.
TACTICAL ALERT [CYBER]: Three critical vulnerabilities (CVE-2021-22054, 
CVE-2025-26399, CVE-2026-1603) targeting local infrastructure were added to the 
CISA KEV list on 2026-03-09.
Tactical Note [AIR]: Persistence of five ghost tracks reporting 0 ft altitude 
and 0 kt speed suggests ongoing sensor noise or ground-level transponder 
interference.
Ingested: Title: Master Tactical SITREP - 2026-03-09 23:30:09
Executing Tactical SITREP Ingest...
TACTICAL ALERT [AIR]: Target c07eef reporting as 'skimming' at 0 ft altitude 
with a ground speed of 451 kt, indicating potential sensor spoofing or 
high-speed telemetry error.
TACTICAL ALERT [RF]: APRS sensor network reported a 'Connection reset by peer' 
error, signifying a loss of connectivity in the tactical signal intelligence 
array.
TACTICAL ALERT [CYBER]: Three new critical vulnerabilities (CVE-2021-22054, 
CVE-2025-26399, CVE-2026-1603) added to CISA KEV targeting infrastructure and 
endpoint management systems.
Ingested: Title: Master Tactical SITREP - 2026-03-10 00:00:08
